# riptide

./: Cargo.toml
crates/riptide-fluids/: Cargo.toml
crates/riptide-fluids/src/: lib.rs  scene.rs
crates/riptide-fluids/src/flip/: d2.rs  d3.rs  flip_2d.rs  flip_3d.rs  mac_2d.rs  mac_3d.rs  mod.rs
crates/riptide-fluids/src/obstacle/: circle.rs  mod.rs
crates/riptide-io/: Cargo.toml
crates/riptide-io/src/: as_bytes.rs  decode.rs  encode.rs  lib.rs
crates/riptide-render/: Cargo.toml
crates/riptide-render/src/: lib.rs
crates/riptide-view/: Cargo.toml
crates/riptide-view/src/: fps.rs  lib.rs  playback.rs
crates/riptide-view/src/particles/: extract.rs  mod.rs  particle.wgsl  pipeline.rs  plugin.rs
crates/riptide-view/src/particles_3d/: extract.rs  mod.rs  particle.wgsl  pipeline.rs  plugin.rs
crates/riptide-view/src/playback/: d2.rs  d3.rs  mod.rs
src/: draw.rs  fluid.rs  main.rs  run.rs
src/backend/: fluid.rs  mod.rs  scene.rs
src/backend/flip/: d2.rs  mod.rs
src/backend/obstacle/: circle.rs  mod.rs
src/fluid/: mod.rs  scene.rs
src/fluid/flip/: d2.rs  d3.rs
src/fluid/obstacle/: circle.rs  mod.rs
src/io/: decode.rs  encode.rs  mod.rs
