[package]
name = "riptide"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/riptide-fluids", 
    "crates/riptide-io",
    "crates/riptide-view",
]

[workspace.dependencies]
riptide-fluids = { path = "crates/riptide-fluids" }
riptide-io = { path = "crates/riptide-io" }
riptide-view = { path = "crates/riptide-view" }

glam = "0.29.2"
ndarray = "0.16.1"
thiserror = "2.0.9"
indicatif = "0.17.9"
smallvec = "1.13.2"

[dependencies]
riptide-fluids.workspace = true
riptide-io.workspace = true
riptide-view.workspace = true

glam.workspace = true
indicatif.workspace = true
smallvec.workspace = true

clap = { version = "4.5.23", features = [ "derive" ] }
